[package]
name = "crawling-spider"
version = "0.1.0"
edition = "2021"
authors = ["Elias Fakoorian"]

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }
scraper = "0.23.1"

[[bin]]
name = "master"
path = "src/main.rs"