[package]
name = "crawling-spider"
version = "0.1.0"
edition = "2021"
authors = ["Elias Fakoorian"]

# See more keys and their definitions at 
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.13.2"
tokio = { version = "1", features = ["full"] }
scraper = "0.25.0"

[[bin]]
name = "master"
path = "src/main.rs"